--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">国家地理</string>
     <string name="app_version_show">国家地理 v1.0</string>
     <string name="app_version">v1.0</string>
+    <string name="load_failture">加载失败，点击重试</string>
 </resources>
